# NLP-2026-A2

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
app/templates/: index.html
data/: Alice_Adventure_In_Wonderland.txt
models/: vocab.json
